--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,8 @@
 		<meta name="description" content="" />
 		<link rel="icon" href="%svelte.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Pair Gen V2</title>
+
 		%svelte.head%
 	</head>
 	<body>
